sửa lại database
sửa lại database, thêm các bẳng và thuộc  tính, sửa lại logic chương trình